--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,8 +25,8 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 25, 100%, 50%, 1;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0, 0%, 100%, 1;
+    --destructive: 357, 91%, 95%;
+    --destructive-foreground: 357, 91%, 55%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
