--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0, 0%, 100%;
+    --background: 0, 0%, 100%, 1;
     --foreground: 0, 0%, 20%;
 
     --card: 0, 0%, 100%;
