--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,6 +77,9 @@
 }
 
 @layer components {
+  .container {
+    @apply max-w-[1200px];
+  }
 }
 .swiper-pagination-bullet {
   width: 16px !important;
