--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,7 +103,7 @@ body {
 }
 /* react pdf */
 
-.Example__container {
+.PD__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -111,18 +111,18 @@ body {
   padding: 10px;
 }
 
-.Example__container__load {
+.PD__container__load {
   margin-top: 0em;
   color: white;
 }
 
-.Example__container__document {
+.PD__container__document {
   width: 100%;
   max-width: calc(100% - 2em);
   /* margin: 1em 0; */
 }
 
-.Example__container__document .react-pdf__Document {
+.PD__container__document .react-pdf__Document {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -133,7 +133,7 @@ body {
   /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.5); */
 }
 
-.Example__container__document .react-pdf__message {
+.PD__container__document .react-pdf__message {
   padding: 20px;
   color: white;
 }
