--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 25, 100%, 50%, 1;
 
-    --destructive: 357, 91%, 95%;
+    --destructive: 0, 100%, 40%;
     --destructive-foreground: 357, 91%, 55%;
 
     --border: 214.3 31.8% 91.4%;
@@ -127,7 +127,19 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
+.hjhgjhgj::after {
+  content: "";
+  display: block;
+  border: 1em solid #dfdcde;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  border-top-color: transparent;
+  position: absolute;
+  top: -1em;
+  left: 0;
+  border-bottom-color: #efefef;
+  margin: -1em 0 0 2em;
+}
 .Example__container__document .react-pdf__Page {
   /* margin: 1em 0; */
   /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.5); */
